@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add ndisasm helper (gh#14)
 
 0.22      2019-06-18 16:52:48 -0400
   - use https instead of http
